--- a/01 - Color Changer/hex.html
+++ b/01 - Color Changer/hex.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Color Changer</title>
     <link rel="stylesheet" href="style.css" />
+    <meta name="description" content="Hex Background Changer - farel" />
   </head>
   <body>
     <nav>
