--- a/02 - Counter/index.html
+++ b/02 - Counter/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Counter</title>
     <link rel="stylesheet" href="style.css" />
+    <meta name="description" content="Counter App made by farel" />
   </head>
   <body>
     <h1>Counter</h1>
