Password Generator Code

--- a/03 - Password Generator/index.html
+++ b/03 - Password Generator/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Password Generator</title>
     <link rel="stylesheet" href="style.css" />
+    <meta name="description" content="Password Generator mabe by Farel" />
   </head>
   <body>
     <nav>
@@ -15,7 +16,7 @@
     <div class="container">
       <div class="group-input">
         <label>Password</label>
-        <input type="text" disabled id="input" />
+        <input type="text" disabled id="input" aria-label="Password" />
       </div>
       <button id="button">Generate</button>
     </div>
