--- a/04 - Countdown/index.html
+++ b/04 - Countdown/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Countdown</title>
     <link rel="stylesheet" href="style.css" />
+    <meta name="description" content="New Year Counter - Farel" />
   </head>
   <body>
     <div class="container">
