--- a/05 - Slider/index.html
+++ b/05 - Slider/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Slider</title>
     <link rel="stylesheet" href="style.css" />
+    <meta name="description" content="Slider - farel" />
   </head>
   <body>
     <div class="slider-container">
